--- a/src/main/resources/static/filmovi.html
+++ b/src/main/resources/static/filmovi.html
@@ -24,43 +24,45 @@
         </div>
     </div>
 </nav>
-<br>
-<h1>Filmovi u ponudi</h1>
+<h1 id="film"><br>Filmovi u ponudi<br><br></h1>
 <br><br>
-<div id="movies">
-    <table id="moviesTable">
-        <tr>
-            <th>Naziv</th>
-            <th>Opis</th>
-            <th>Žanr</th>
-            <th>Trajanje</th>
-            <th>Prosečna ocena</th>
-            <th></th>
-        </tr>
-    </table>
-</div>
+<center>
+    <div id="movies">
+        <table id="moviesTable">
+            <tr>
+                <th>Naziv</th>
+                <th>Opis</th>
+                <th>Žanr</th>
+                <th>Trajanje</th>
+                <th>Prosečna ocena</th>
+                <th></th>
+            </tr>
+        </table>
+    </div>
 
-<div id="oneFilm" hidden>
-    <!--<h2 id="naziv"></h2>
-    <h2 id="zanr"></h2>
-    <h2 id="trajanje"></h2>
-    <h2 id="prosecaocena"></h2>-->
-    <table id="oneFilmTable">
-       <!-- <tr>
-            <th>Naziv</th>
-            <th>Opis</th>
-            <th>Žanr</th>
-            <th>Trajanje</th>
-            <th>Prosečna ocena</th>
-            <th>Cena</th>
-            <th>Datum i vreme</th>
-            <th>Bioskop</th>
-            <th>Broj slobodnih karata</th>
-        </tr>-->
-    </table>
-    <br><br>
-    <center><button class="btnBack">Nazad</button></center>
-</div>
+    <div id="oneFilm" hidden>
+        <!--<h2 id="naziv"></h2>
+        <h2 id="zanr"></h2>
+        <h2 id="trajanje"></h2>
+        <h2 id="prosecaocena"></h2>-->
+        <table id="oneFilmTable">
+           <!-- <tr>
+                <th>Naziv</th>
+                <th>Opis</th>
+                <th>Žanr</th>
+                <th>Trajanje</th>
+                <th>Prosečna ocena</th>
+                <th>Cena</th>
+                <th>Datum i vreme</th>
+                <th>Bioskop</th>
+                <th>Broj slobodnih karata</th>
+            </tr>-->
+        </table>
+        <br><br>
+        <button class="btnBack">Nazad</button>
+    </div>
+</center>
+
 
 
 </body>
