--- a/src/main/resources/static/admin_bioskopi_novi.html
+++ b/src/main/resources/static/admin_bioskopi_novi.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/admin_bioskopi.js"></script>
+    <script src="js/admin_bioskopi_novi.js"></script>
     <meta charset="utf-8"/>
 </head>
 <body><!--onload="provera()"-->
@@ -30,11 +30,8 @@
 <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
 <center>
     <h2 id = "naslov">Bioskopi:<br><br><br></h2>
-    <table id="movies">
-
-    </table>
-    <div id="izmeni_bioskop_form" hidden>
-        <form id="izmeni_bioskop" class="forma">
+    <div id="dodaj_bioskop_form">
+        <form id="dodaj_bioskop" class="forma">
             <label for="naziv">Naziv:</label>
             <input id="naziv" type="text" placeholder="Unesite naziv" /><br>
 
@@ -47,13 +44,12 @@
             <label for="email">Email:</label>
             <input id="email" type="text" placeholder="Unesite email:"/>
 
-            <!--<label for="menadzer">Izaberite inicijalnog menadžera</label>
+            <label for="menadzer">Izaberite inicijalnog menadžera</label>
             <select name="menadzer" id="menadzer">
-            </select>-->
+            </select>
         </form>
 
     </div>
-    <h3><a href="admin_bioskopi_novi.html">Novi bioskop</a></h3>
 
     <table id = "moviesTable">
 
