--- a/src/main/resources/static/admin_index.html
+++ b/src/main/resources/static/admin_index.html
@@ -8,7 +8,7 @@
     <script src="js/admin_index.js"></script>
     <meta charset="utf-8"/>
 </head>
-<body onload="provera()">
+<body><!--onload="provera()"-->
 <nav>
     <div class="container">
         <div class="logo_div">
@@ -26,18 +26,14 @@
 </nav>
 
 
-<h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-<h2>Korisnici kojima treba odobriti registracije:<br><br><br></h2>
 
-<table id="movies">
-    <tr>
-        <th>Uloga</th>
-        <th>Ime</th>
-        <th>Prezime</th>
-        <th>Korisnicko ime</th>
-        <th></th>
-    </tr>
-</table>
+<h1 id="film"><br>Novosadski bioskopi<br><br></h1>
+<center>
+    <h2>Korisnici kojima treba odobriti registracije:<br><br><br></h2>
+    <table id="movies">
+
+    </table>
+</center>
 
 </body>
 </html>
