--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     <script src="js/index.js"></script>
     <meta charset="utf-8"/>
 </head>
-<body>
+<body onload="provera()">
 <nav>
     <div class="container">
         <div class="logo_div">
@@ -26,8 +26,9 @@
 </nav>
 
 <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-<h2>Dobodošli na stranicu novosadskih bioskopa!</h2>
-
+<center>
+    <h2><br>Dobodošli na stranicu novosadskih bioskopa!</h2>
+</center>
 
 
 
