--- a/src/main/resources/static/admin_bioskopi.html
+++ b/src/main/resources/static/admin_bioskopi.html
@@ -30,6 +30,8 @@
 <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
 <center>
     <h2 id = "naslov">Bioskopi:<br><br><br></h2>
+    <a href="admin_bioskopi_novi.html" id="novi_bioskop">Novi bioskop</a>
+    <br><br><br><br>
     <table id="movies">
 
     </table>
@@ -47,19 +49,16 @@
             <label for="email">Email:</label>
             <input id="email" type="text" placeholder="Unesite email:"/>
 
-            <!--<label for="menadzer">Izaberite inicijalnog menadžera</label>
-            <select name="menadzer" id="menadzer">
-            </select>-->
         </form>
 
     </div>
-    <h3><a href="admin_bioskopi_novi.html">Novi bioskop</a></h3>
 
     <table id = "moviesTable">
 
     </table>
 
 </center>
+
 
 
 </body>
