--- a/src/main/resources/static/admin_index.html
+++ b/src/main/resources/static/admin_index.html
@@ -8,7 +8,7 @@
     <script src="js/admin_index.js"></script>
     <meta charset="utf-8"/>
 </head>
-<body><!--onload="provera()"-->
+<body onload="provera()">
 <nav>
     <div class="container">
         <div class="logo_div">
