--- a/src/main/resources/static/admin_menadzeri.html
+++ b/src/main/resources/static/admin_menadzeri.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Novosadski bioskopi</title>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/jquery.validate.min.js"></script>
-    <script src="/js/index.js"></script>
+    <link rel="stylesheet" href="css/style.css"/>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/admin_menadzeri.js"></script>
     <meta charset="utf-8"/>
 </head>
 <body>
@@ -27,17 +27,22 @@
 
 
 <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-<h2>Korisnici kojima treba odobriti registracije:<br><br><br></h2>
+<center>
+    <h2 id="mngr">Menadžeri:<br><br><br></h2>
 
-<table id="movies">
-    <tr>
-        <th>Uloga</th>
-        <th>Ime</th>
-        <th>Prezime</th>
-        <th>Korisnicko ime</th>
-        <th></th>
-    </tr>
-</table>
+    <table id="movies">
+
+    </table>
+
+    <table id = "mngrTable">
+
+    </table>
+    <br><br>
+
+    <table id = "moviesTable">
+
+    </table>
+</center>
 
 </body>
 </html>
